@@ -165,8 +165,8 @@ struct refclockbug {
 #define LDISC_CLK	0x1	/* tty_clk \n intercept */
 #define LDISC_CLKPPS	0x2	/* tty_clk \377 intercept */
 #define LDISC_ACTS	0x4	/* tty_clk #* intercept */
-#define LDISC_CHU	0x8	/* tty_chu */
-#define LDISC_PPS	0x10	/* ppsclock */
+#define LDISC_CHU	0x8	/* depredated */
+#define LDISC_PPS	0x10	/* ppsclock, ppsapi */
 #define LDISC_RAW	0x20	/* raw binary */
 
 struct refclockproc {
