@@ -1,3 +1,11 @@
+1999-12-04  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* ntpd/ntp_refclock.c (refclock_open): "flags" processing cleanup
+	(refclock_open): PPS device initialization cleanup
+	* include/ntp_refclock.h (LDISC_CHU): 
+	(LDISC_PPS): Clean up comments
+	From: Dave Mills <mills@udel.edu>
+
 1999-12-03  Sven Dietrich <sven_dietrich@trimble.com>
 
 	* libntp/mexit.c: Moved WINNT port specific file to ports/winnt/libntp
